@@ -1,3 +1,8 @@
+2005-11-06  Prakash Punnoor <prakash@punnoor.de>
+
+	* configure.ac, config-osx.h, src/al_siteconfig.h: cleaning-up:
+	removed unused/obsolete stuff
+
 2005-11-03  Sven Panne  <sven.panne@aedion.de>
 
 	* src/alc/alc_context.c: Minor aesthetical changes in alcGetIntegerv.
